force-app/main/default/objects/Zumzum__Purchase_Invoice__c/Zumzum__Purchase_Invoice__c.object-meta.xml
<CustomObject>
    <label>Purchase Invoice</label>
    <nameField>
        <label>PI Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>