force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Payment_Run__c.field-meta.xml
<CustomField>
    <fullName>Payment_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Run</label>
    <referenceTo>Payment_Run__c</referenceTo>
    <relationshipLabel>Purchase Invoices</relationshipLabel>
    <relationshipName>Purchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>