force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Account__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Invoices</relationshipLabel>
    <relationshipName>Purchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>