force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Company_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company_Amount_Paid__c</fullName>
    <label>Company Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>