force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Company_To_Corporate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company_To_Corporate_Rate__c</fullName>
    <label>Company To Corporate Rate</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>