force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Company_Total_VAT__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company_Total_VAT__c</fullName>
    <label>Company Total VAT</label>
    <summarizedField>Zumzum__Purchase_Invoice_Line_Item__c.Zumzum__Company_Tax_Total__c</summarizedField>
    <summaryForeignKey>Zumzum__Purchase_Invoice_Line_Item__c.Zumzum__Purchase_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>