force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Company_Unpaid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company_Unpaid_Amount__c</fullName>
    <formula>Zumzum__Company_Total_Gross__c  -  Zumzum__Company_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Unpaid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>