force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Contact__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Invoices</relationshipLabel>
    <relationshipName>Purchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>