force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Custom_Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Custom_Rate_Date__c</fullName>
    <label>Custom Rate Date</label>
    <type>Date</type>
</CustomField>