force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Dimension__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Dimension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension</label>
    <referenceTo>Zumzum__Dimension__c</referenceTo>
    <relationshipLabel>Purchase Invoices</relationshipLabel>
    <relationshipName>Purchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>