force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Foreign_Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Foreign_Currency_Rate__c</fullName>
    <label>Foreign Currency Rate</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>