force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Foreign_Unpaid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Foreign_Unpaid_Amount__c</fullName>
    <formula>Zumzum__Foreign_Total_Gross__c  -  Zumzum__Foreign_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreign Unpaid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>