force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Invoice_Due_Date__c</fullName>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>