force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Paid__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Paid__c</fullName>
    <defaultValue>&#39;N&#39;</defaultValue>
    <label>Paid</label>
    <length>1</length>
    <type>Text</type>
</CustomField>