force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__POP_Number__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__POP_Number__c</fullName>
    <label>External Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>