force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Settlement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Settlement_Discount__c</fullName>
    <label>Settlement Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>