force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Settlement_due_days__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Settlement_due_days__c</fullName>
    <label>Settlement due days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>