force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Total_Net__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Total_Net__c</fullName>
    <label>Total Net</label>
    <summarizedField>Zumzum__Purchase_Invoice_Line_Item__c.Zumzum__Total_Net__c</summarizedField>
    <summaryForeignKey>Zumzum__Purchase_Invoice_Line_Item__c.Zumzum__Purchase_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>