force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Type__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Invoice</fullName>
            </value>
            <value>
                <fullName>Purchase Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>