force-app/main/default/objects/Zumzum__Purchase_Invoice__c/fields/Zumzum__Unpaid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Unpaid_Amount__c</fullName>
    <formula>Zumzum__Total_Gross__c - Zumzum__Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>