force-app/main/default/objects/Zumzum__Purchase_Invoice__c/validationRules/Linked_to_expense_sheet_only_by_Finance.validationRule-meta.xml
<ValidationRule>
    <fullName>Linked_to_expense_sheet_only_by_Finance</fullName>
    <active>true</active>
    <description>PI can be created only by Finance when the ES value is present</description>
    <errorConditionFormula>NOT(
 OR(
  $Permission.Can_Convert_Expense_Sheet,
  ISBLANK( Zumzum__Expense_Sheet__c )
 )
)</errorConditionFormula>
    <errorMessage>Only Finance user can convert Expense Sheet</errorMessage>
</ValidationRule>