force-app/main/default/objects/Zumzum__Purchase_Invoice__c/validationRules/Zumzum__Validate_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Zumzum__Validate_Status</fullName>
    <active>true</active>
    <description>Block Status update once invoice is posted</description>
    <errorConditionFormula>IF(AND( ISPICKVAL(PRIORVALUE( Zumzum__Status__c ), &#39;Posted&#39;) , ISCHANGED(Zumzum__Status__c ) ) , true, false)</errorConditionFormula>
    <errorDisplayField>Zumzum__Status__c</errorDisplayField>
    <errorMessage>This Purchase Invoice is locked and prevents you from changing the status once it has been Posted to the ledger. Please consider creating a Purchase Credit to reverse this transaction or consult your accountant for advice.</errorMessage>
</ValidationRule>