force-app/main/default/objects/Zumzum__Purchase_Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>