force-app/main/default/objects/Zumzum__Purchase_Invoice__c/listViews/Not_Paid.listView-meta.xml
<ListView>
    <fullName>Not_Paid</fullName>
    <columns>NAME</columns>
    <columns>Zumzum__Invoice_Date__c</columns>
    <columns>Zumzum__Account__c</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Paid__c</columns>
    <columns>Zumzum__Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Zumzum__Paid__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <label>Not Paid</label>
    <language>en_US</language>
    <sharedTo>
        <allCustomerPortalUsers/>
        <allInternalUsers/>
        <allPartnerUsers/>
    </sharedTo>
</ListView>