force-app/main/default/objects/Zumzum__Purchase_Invoice__c/listViews/Paid.listView-meta.xml
<ListView>
    <fullName>Paid</fullName>
    <columns>NAME</columns>
    <columns>Zumzum__Invoice_Date__c</columns>
    <columns>Zumzum__Account__c</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Paid__c</columns>
    <columns>Zumzum__Status__c</columns>
    <columns>Zumzum__Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Zumzum__Paid__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <label>Paid</label>
    <language>en_US</language>
    <sharedTo>
        <allCustomerPortalUsers/>
        <allPartnerUsers/>
    </sharedTo>
</ListView>