force-app/main/default/objects/Zumzum__Purchase_Invoice__c/listViews/Zumzum__All.listView-meta.xml
<ListView>
    <fullName>Zumzum__All</fullName>
    <columns>NAME</columns>
    <columns>Zumzum__Invoice_Date__c</columns>
    <columns>Zumzum__Account__c</columns>
    <columns>Zumzum__Total_Gross__c</columns>
    <columns>Zumzum__Paid__c</columns>
    <columns>Zumzum__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>